compiler/testData/diagnostics/tests/inline/nonPublicMember/kt14887.fir.kt
inline fun foo() {
    <!UNRESOLVED_REFERENCE!>unresolved<!>().another
    <!UNRESOLVED_REFERENCE!>unresolved<!>().another()
}

fun main() {
    foo()
}
